Añadido el chiste de Balmermort

--- a/lp06.md
+++ b/lp06.md
@@ -2,4 +2,4 @@
 
 A lo largo de la historia **Valnmermort** está detrás de todo
 **Larry** descubre un libro de ensamblador que pertenece a un misterioso hacker
-
+*Balbermort* relanza un viejo windows, dejando a la escuela de Hardware en MS-DOS
